--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,8 +19,10 @@ requirements:
   host:
     - pip
     - python >=3.6
+    - setuptools
+    - setuptools_scm
+    - wheel
   run:
-    - invoke
     - python >=3.6
 
 test:
